test/parser.d/invalid/typedef-enum-1.surc.bad
import whatever

def enum Enum = { }
